--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap");
 
 * {
   margin: 0;
@@ -7,7 +7,8 @@
 }
 
 body {
-  font-family: "Oswald", sans-serif;
+  font-family: "Roboto", sans-serif;
+  background-color: black;
 }
 
 a {
@@ -18,7 +19,6 @@ li {
   list-style: none;
 }
 
-/* NAVBAR STYLING STARTS */
 .navbar {
   display: flex;
   align-items: center;
@@ -55,8 +55,6 @@ li {
 
 /* RESPONSIVE NAVBAR MENU STARTS */
 
-/* CHECKBOX HACK */
-
 input[type="checkbox"] {
   display: none;
 }
@@ -68,6 +66,37 @@ input[type="checkbox"] {
   user-select: none;
 }
 
+.mainSection {
+  /* background-image: url("bg.jpg"); */
+
+  height: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mainSection h1 {
+  padding: 10px;
+  font-size: 70px;
+  width: 500px;
+  text-align: center;
+  flex-direction: row;
+}
+.mainSection p {
+  font-size: 28px;
+  padding: 10px;
+  margin: 10px;
+  width: 800px;
+}
+
+.mainSection img {
+  border-radius: 50%;
+  width: 200px;
+}
+.socialP {
+  width: 200px;
+}
 /* APPLYING MEDIA QUERIES */
 @media (max-width: 768px) {
   .menu {
